# AdwaiGram

./: .editorconfig  .gitignore  Cargo.toml  build.rs  flake.nix  i18n.toml  icons.toml  rustfmt.toml  taplo.toml  treefmt.nix  treefmt.toml
data/: __build.rs  icons.gresource.xml  resources.gresource.xml  style.css
icons/: __build.rs
locales/: __build.rs
locales/en-US/: AdwaiGram.ftl  hello-world.ftl
locales/ru-RU/: AdwaiGram.ftl  hello-world.ftl
src/: __build.rs  constants.rs  i18n.rs  main.rs  test_component.rs
src/ui/: about.rs  chat_list_item.rs  mod.rs
