[package]
    edition = "2024"
    name    = "AdwaiGram"
    version = "0.1.0"

[dependencies]
    chrono        = "0.4.41"
    const-str     = "0.6.4"
    fluent        = "0.17.0"
    git-version   = "0.3.9"
    intl-memoizer = "0.5.3"
    relm4-icons   = "0.10.0-beta.2"
    [dependencies.unic-langid]
        features = [ "macros" ]
        version  = "0.9.6"
    [dependencies.relm4]
        features = [ "gnome_47", "libadwaita" ]
        version  = "0.9.1"

[build-dependencies]
    glib-build-tools = "0.21.0"
    #relm4-icons-build = "0.10.0-beta.2"
    [build-dependencies.relm4-icons-build]
        git = "https://github.com/Sk7Str1p3/icons"
